--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mon jeu de plateforme Kaboom</title>
+  <title>Jeu de plateforme Kaboom</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
   <script type="module" src="js/main.js"></script>
