--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jeu de plateforme Kaboom</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mon Platformer Kaboom</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
+      margin: 0; padding: 0;
+      width: 100%; height: 100%;
       overflow: hidden;
+      background: #000; /* au cas où */
     }
   </style>
 </head>
